@@ -1,0 +1,28 @@
+<?php
+global $fckg_lang;
+
+$fckg_lang['btn_dw_edit'] = "DW Editor";
+$fckg_lang['dw_btn_fck_preview']="FCK Voorbeeld";
+$fckg_lang['dw_btn_lang']="Taal";
+$fckg_lang['title_dw_delete'] = "Pagina schrappen";
+$fckg_lang['title_dw_edit'] = "Werk opslaan, Stop, en terugschakelen naar de originele DokuWiki Editor";
+$fckg_lang['dw_btn_revert'] = "Terugkeren";
+$fckg_lang['title_dw_revert'] = "Terugkeren naar vorige back-up";
+$fckg_lang['title_dw_lang']="Selecteer taal voor spellingcontrole";
+$fckg_lang['title_dw_cancel']='Stop Editor';
+$fckg_lang['btn_fck_edit'] = "FCK Editor";
+$fckg_lang['confirm_delete'] = "Wil je deze pagina schrappen? Zeker?";
+$fckg_lang['confirm_preview'] = "Niet opgeslagen werk gaat verloren.";
+
+$fckg_lang['dw_btn_backup'] ="Back-up";
+$fckg_lang['title_dw_backup'] ="Back up editor venster & hernieuw vergrendeling";
+$fckg_lang['backup_empty'] = "De back-up buffer is blijkbaar leeg. Verder gaan?";
+$fckg_lang['btn_draft'] = "Ontwerp";
+$fckg_lang['title_draft'] = "Bekijk, Toon, Bewerk ontwerp";
+$fckg_lang['btn_exit_draft'] = "Stop ontwerp";
+$fckg_lang['title_draft'] = "Bekijk, Toon, Bewerk ontwerp";
+$fckg_lang['title_exit_draft'] = "Keer terug naar huidig document";
+$fckg_lang['draft_msg']= "Dit document heeft een ontwerp bestand. De ontwerp knop schakelt tussen dit document en het ontwerp. Je kan een van beide bewerken en bewaren." ;
+
+
+
