@@ -1,4 +1,36 @@
 <?php
 
-$lang['groups'] = "Lijst van groepen met toestemming om slot-tijdopnemer onbruikbaar te maken";
-$lang['middot'] = "Lijst van groepen die &amp;middot; gebruiken voor &amp;nbsp;";
+$lang['groups'] = "Groep met rechten om lock timer uit te schakelen (afgeschaft)";
+$lang['middot'] = "Comma gescheiden lijst van groepen die &amp;middot; gebruiken voor &amp;nbsp;";
+$lang['big_files'] = "Check om te grote bestanden veilig te editeren";
+$lang['big_file_sz'] = "Te groot bestand (bytes)";
+$lang['big_file_tm'] = "Verwerking van een te groot bestand zal stoppen na (seconden):";
+$lang['fck_preview'] = "FCK Voorbeeld Groep";
+$lang['guest_toolbar'] = "Toon werkbalk aan Gast";
+$lang['guest_media'] = "Gast mag Media bestanden linken";
+$lang['open_upload'] = "Gast mag uploaden";
+$list = plugin_list('syntax');
+$list = implode  (", "  , $list);
+$lang['xcl_plugins'] ="Comma gescheiden lijst van onveranderlijke Syntax plugins. " .
+		"De namen moeten gespeld worden zoals in de lijst van geinstalleerde plugins: $list";
+$lang['default_fb'] = "Verstek bestandsbenadering. Zonder (none) verstekwaarde is ACL niet van toepassing.";
+$lang['openfb'] = "Open bestandsbenadering. De gebruiker krijgt hierdoor toegang tot de volledige directory structuur, ongeacht de gebruikersrechten dit al dan niet toelaten. ACL is wel van toepassing op uploads.";
+#$lang['csrf'] = "If you get a CSRF warning, check this box.";
+$lang['dw_edit_display'] = 'Welke gebruikers mogen de "DW Editor" knop gebruiken. Selecteer: "all" voor alle gebruikers; "admin" voor administrator en beheerders; "none" voor niemand. Verstekwaarde is "all".';
+$lang['smiley_as_text']  = 'Toon smileys als tekst in FCKeditor (wordt wel als afbeelding getoond in de browser)';
+$lang['editor_bak'] = "Sla backup op in meta/&lt;namespace&gt;.fckg";
+$lang['create_folder'] = "Activeer knop Aanmaken map in bestandsverkenner (y/n)";
+$lang['dwedit_ns'] = "Comma gescheiden lijst van namespaces waarbij FckgLite automatisch terugschakelt" .
+		"naar de oorspronkelijke DokuWiki Editor.";
+$lang['acl_del'] =  "Verstekwaarde (niet aangevinkt) voor schrappen van media bestanden voor gebruikers met upload rechten; indien aangevinkt, dan heeft gebruiker toelating nodig om bestand uit de map te schrappen.";
+$lang['auth_ci'] = "De gebruikers login is niet hoofdletter gevoelig, dus je kan inloggen met zowel GEBRUIKER als gebruiker";
+$lang['nix_style'] = "Voor Windows Servers (Vista en later).  Deze parameter maakt het mogelijk om data\\media te benaderen met fckg\\fckeditor\\userfiles, indien links naar media en bestand succesvol aangemaakt zijn in userfiles";
+$lang['no_symlinks']  = "Desactiveer automatische creatie van symbolische links in fckg/userfiles.";
+$lang['direction'] = 'Zet de schrijf en lees richting van de taal in FCKeditor:  <b>nocheck</b>: geen wijziging van de verstekwaarde in fckgLite; '
+		. ' <b>dokuwiki</b>:  gebruik de Dokuwiki taal schrijfrichting;  <b>ltr</b>: Links-naar-rechts; <b>rtl</b>: Rechts-naar-links.';
+$lang['scayt_auto'] = 'Activeer automatisch de SCAYT spellingcontrole. Verstekwaarde is "on". Om uit te schakelen selecteer "off"';
+$lang['scayt'] = 'Gebruik de SCAYT spellingcontrole. Verstekwaarde is "on"; selecteer je "off" dan wordt geswitched naar de spellingpagina checker';
+$lang['scayt_lang']="Activeer de SCAYT verstek taalkode.";
+$lang['smiley_hack'] = "Reset de URL voor FCKeditor's smilies bij verhuis naar nieuwe server. Dit wordt pagina per pagina uitgevoerd bij het openen en bewaren van de pagina.  Deze optie zou normaal uit moeten staan.";
+$lang['complex_tables'] ="Gebruik het complex tables algorithm, in tegenstelling tot het standaard ontleding algoritme. Dit zou een beter resultaat geven wanneer complexe rowspans en colspans gemengd worden.";
+$lang['duplicate_notes'] = "Zet deze optie op true (aanvinken) wanneer gebruikers meerdere voetnotas maken met dezelfde voettekst; deze optie is noodzakelijk om te voorkomen dat de voetnotas corrupt geraken.";
