@@ -1,4 +1,4 @@
-rev 13-Jul_11-18_38
+rev 13-Jul_19-19_14
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -220,3 +220,7 @@ Removed duplicate ~~CMPLEX_TABLES~~ macros
 
 11 July
 Added escapes to Plugin pattern regexes in edit.php, e.g. for '('
+
+
+19 Jul
+Dutch language files for settings.php and action/lang
